...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp">
            <ImageView
                android:id="@+id/screenshot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/name"
                android:text="@string/place_holder"
...
                android:textSize="16sp"
                android:textColor="@color/colorDisabledDarkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/getProduct"
                android:text="@string/button_get"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
...
